examples/istio-ingress-gw/web.yaml
apiVersion: v1
kind: Service
metadata:
  name: myservice
  namespace: default
  labels:
    app: myservice
    service: myservice
spec:
  selector:
    app: myservice
  ports:
    - port: 9090
      targetPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myservice-deployment
  namespace: default
  labels:
    app: myservice
    version: v1
    service: fake-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myservice
  template:
    metadata:
      namespace: default
      labels:
        app: myservice
        service: fake-service
    spec:
      serviceAccountName: myservice
      containers:
        - name: myservice
          image: nicholasjackson/fake-service:v0.25.2
          ports:
            - containerPort: 9090
